FstabHandling: ensure mountpoints starts with / for nfs

BUG: 474242